--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,6 @@
-@import './base.css';
+@import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
 
 #app {
   max-width: 1280px;
@@ -7,29 +9,14 @@
   font-weight: normal;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+input {
+    @apply p-2 border border-gray-300 rounded-md;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+textarea {
+    @apply p-2 border border-gray-300 rounded-md;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+.CodeMirror {
+    border-radius: 0.375rem !important;
 }
